--- a/index.html
+++ b/index.html
@@ -1,11 +1,237 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="com">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first work</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>This is an example project</h1>
+    <div class="layout">
+        <div class="header container">
+            <a href="#">
+                <img src="image/logo.png" alt="logo" />
+            </a>
+            <div class="nav">
+                <a class="nav-link" href="#first">История города</a>
+                <a class="nav-link" href="#second">Фото</a>
+            </div>
+            <div class="social">
+                <a class="social-link" href="https://www.youtube.com/channel/UC3gRnea39Vi3x11up7ulMtw">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="31" height="22" viewBox="0 0 31 22" fill="none">
+                        <g clip-path="url(#clip0_1_60)">
+                            <path
+                                d="M30.3154 3.43139C30.1376 2.76816 29.7907 2.16351 29.3094 1.67766C28.828 1.1918 28.229 0.841697 27.5719 0.6622C25.1662 0 15.4843 0 15.4843 0C15.4843 0 5.80187 0.0200444 3.39622 0.682244C2.7391 0.861752 2.14004 1.21188 1.6587 1.69775C1.17735 2.18363 0.830511 2.7883 0.652719 3.45156C-0.0749338 7.76576 -0.357203 14.3396 0.672699 18.4812C0.85051 19.1445 1.19736 19.7491 1.6787 20.235C2.16005 20.7208 2.7591 21.0709 3.4162 21.2504C5.82185 21.9126 15.504 21.9126 15.504 21.9126C15.504 21.9126 25.1861 21.9126 27.5916 21.2504C28.2487 21.0709 28.8478 20.7208 29.3292 20.235C29.8105 19.7491 30.1574 19.1445 30.3352 18.4812C31.1027 14.1609 31.3392 7.5911 30.3154 3.43139Z"
+                                fill="#010102" />
+                            <path d="M12.4025 15.6518L20.4344 10.9562L12.4025 6.26071V15.6518Z" fill="white" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_1_60">
+                                <rect width="31" height="22" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </a>
+                <a class="social-link" href="https://t.me/+dAR-wqOaUNBhMmFi">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" fill="none">
+                        <g clip-path="url(#clip0_1_57)">
+                            <path
+                                d="M11.5 0C8.4507 0 5.52359 1.21235 3.36914 3.36824C1.21246 5.52499 0.000597407 8.44995 0 11.5C0 14.5488 1.21289 17.4759 3.36914 19.6318C5.52359 21.7876 8.4507 23 11.5 23C14.5493 23 17.4764 21.7876 19.6309 19.6318C21.7871 17.4759 23 14.5488 23 11.5C23 8.45124 21.7871 5.52413 19.6309 3.36824C17.4764 1.21235 14.5493 0 11.5 0Z"
+                                fill="url(#paint0_linear_1_57)"></path>
+                            <path
+                                d="M5.20605 11.3785C8.55901 9.91804 10.7943 8.9551 11.912 8.48988C15.1068 7.16145 15.7699 6.93074 16.2029 6.92292C16.2982 6.92139 16.5102 6.94493 16.6485 7.05679C16.7635 7.15112 16.7959 7.2787 16.8121 7.36828C16.8264 7.45776 16.8462 7.66171 16.83 7.82091C16.6575 9.63935 15.9082 14.0521 15.5273 16.0889C15.3674 16.9506 15.0493 17.2396 14.7421 17.2678C14.0736 17.3293 13.5669 16.8265 12.92 16.4026C11.9084 15.739 11.337 15.3261 10.3541 14.6787C9.21847 13.9305 9.95519 13.5192 10.6021 12.8471C10.771 12.6712 13.7142 9.99477 13.77 9.75201C13.7771 9.72164 13.7843 9.60844 13.716 9.54878C13.6496 9.48895 13.5507 9.50943 13.4789 9.5256C13.3764 9.5486 11.761 10.6174 8.6273 12.7318C8.16909 13.0469 7.75401 13.2006 7.38026 13.1925C6.97058 13.1837 6.17995 12.9603 5.59237 12.7695C4.87362 12.5354 4.30042 12.4116 4.35073 12.0139C4.37589 11.8069 4.66159 11.5951 5.20605 11.3785Z"
+                                fill="white"></path>
+                        </g>
+                        <defs>
+                            <linearGradient id="paint0_linear_1_57" x1="1150" y1="0" x2="1150" y2="2300"
+                                gradientUnits="userSpaceOnUse">
+                                <stop></stop>
+                                <stop offset="1" stop-color="#229ED9"></stop>
+                            </linearGradient>
+                            <clipPath id="clip0_1_57">
+                                <rect width="23" height="23" fill="white"></rect>
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </a>
+            </div>
+        </div>
+        <div class="hero container">
+            <div class="hero-left">
+                <div class="hero-title">
+                    Посетите расположенный в сердце Румынии, город Брашов.
+                </div>
+                <div class="hero-description">
+                    Он славится атмосферными старыми улочками, старинной готической архитектурой и потрясающей
+                    романтической атмосферой, представляя собой смесь прекрасных горных пейзажей и средневековой истории
+                    с значительным саксонским влиянием.
+                </div>
+                <a class="hero-btn" href="#">Заказать тур</a>
+            </div>
+            <div class="hero-right">
+                <div class="hero-reviews-list">
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Черная церковь</div>
+                            <div class="hero-reviews-text">
+                                В тени таинственных гор, среди тесных улочек Брашова, возвышается Черная
+                                Церковь,стройная и мрачная в своей красоте, она словно стражница времени, сохраняющая в
+                                себе душу старого Брашова.
+                            </div>
+                        </div>
+                        <img src="image/1.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Центральная Площадь</div>
+                            <div class="hero-reviews-text">
+                                Центральная площадь Брашова — не только географический центр города, но и его
+                                биографический центр, где каждый гость становится частью его неповторимой истории.
+                            </div>
+                        </div>
+                        <img src="image/2.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Strada Sforii</div>
+                            <div class="hero-reviews-text">
+                                Strada Sforii — это не просто улица, это магическое место, где каждый шаг пробуждает
+                                новые чувства и воспоминания.Её узкие стены словно приглашают вас на путешествие сквозь
+                                время, в эпоху, где каждый камень хранит свою историю.
+                            </div>
+                        </div>
+                        <img src="image/3.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Ворота Екатерины</div>
+                            <div class="hero-reviews-text">
+                                Ворота Екатерины в Брашове-стали неотъемлемой частью городского облика, отражая его
+                                бурную и славную историю.Их каменные стены,пронизанные веками, служили не только защитой
+                                города, но и символом его могущества и силы.
+                            </div>
+                        </div>
+                        <img src="image/4.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Гора Тымпа</div>
+                            <div class="hero-reviews-text">
+                                Гора Тымпа и канатная дорога в Брашове — это источник вечной вдохновения и великолепного
+                                приключения.По мере подъема, сердце наполняется восторгом, а душа — свободой, словно
+                                сливаясь с ветром и горными вершинами.
+                            </div>
+                        </div>
+                        <img src="image/5.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Черная церковь</div>
+                            <div class="hero-reviews-text">
+                                В тени таинственных гор, среди тесных улочек Брашова, возвышается Черная
+                                Церковь,стройная и мрачная в своей красоте, она словно стражница времени, сохраняющая в
+                                себе душу старого Брашова.
+                            </div>
+                        </div>
+                        <img src="image/1.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Центральная Площадь</div>
+                            <div class="hero-reviews-text">
+                                Центральная площадь Брашова — не только географический центр города, но и его
+                                биографический центр, где каждый гость становится частью его неповторимой истории.
+                            </div>
+                        </div>
+                        <img src="image/2.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Strada Sforii</div>
+                            <div class="hero-reviews-text">
+                                Strada Sforii — это не просто улица, это магическое место, где каждый шаг пробуждает
+                                новые чувства и воспоминания.Её узкие стены словно приглашают вас на путешествие сквозь
+                                время, в эпоху, где каждый камень хранит свою историю.
+                            </div>
+                        </div>
+                        <img src="image/3.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Ворота Екатерины</div>
+                            <div class="hero-reviews-text">
+                                Ворота Екатерины в Брашове-стали неотъемлемой частью городского облика, отражая его
+                                бурную и славную историю.Их каменные стены,пронизанные веками, служили не только защитой
+                                города, но и символом его могущества и силы.
+                            </div>
+                        </div>
+                        <img src="image/4.png" alt="фотографии">
+                    </a>
+                    <a href="#" class="hero-reviews">
+                        <div class="hero-reviews-content">
+                            <div class="hero-reviews-name">Гора Тымпа</div>
+                            <div class="hero-reviews-text">
+                                Гора Тымпа и канатная дорога в Брашове — это источник вечной вдохновения и великолепного
+                                приключения.По мере подъема, сердце наполняется восторгом, а душа — свободой, словно
+                                сливаясь с ветром и горными вершинами.
+                            </div>
+                        </div>
+                        <img src="image/5.png" alt="фотографии">
+                    </a>
+                </div>
+
+            </div>
+        </div>
+        <div class="history container">
+            <div class="history-text" id="first">
+                Брашов имеет богатую историю, уходящую корнями в XIII век. Город был основан саксонскими колонистами,
+                привлеченными королями Венгрии для укрепления границы и роста торговли. Стратегическое расположение в
+                долине между Карпатами делало его привлекательным для торговцев и путешественников, что способствовало
+                его быстрому развитию.
+
+                Саксонские колонисты возвели крепость и начали строительство города вокруг неё. В XIII веке Брашов
+                получил статус города и право на самоуправление, а в XIV веке вошел в состав Ганзейского союза, что
+                сильно усилило его экономическую мощь и политическое влияние.
+
+                В течение веков Брашов стал местом смешения различных культур и национальностей. Немцы, венгры, румыны,
+                армяне и другие народы сосуществовали здесь, оставляя свой отпечаток на городской архитектуре, культуре
+                и обычаях.
+
+                В течение истории Брашов стал свидетелем многих важных событий, включая войны, революции и экономические
+                изменения. В XX веке город был включен в состав Румынии и стал одним из важных промышленных и культурных
+                центров страны.
+
+                Сегодня Брашов остается важным культурным, экономическим и туристическим центром Румынии, привлекая
+                посетителей своей исторической архитектурой, красивыми пейзажами и богатым культурным наследием.
+            </div>
+        </div>
+        <div class="photo container">
+            <p class="photo">
+                <a class="photo1" id="second">
+                    <img src="image/11.png" alt="Фотография 1" width="500" height="500">
+                </a>
+                <a class="photo2" id="second">
+                    <img src="image/22.png" alt="Фотография 2" width="500" height="500">
+                </a>
+                <a class="photo3" id="second">
+                    <img src="image/33.png" alt="Фотография 3" width="500" height="500">
+                </a>
+                <a class="photo4" id="second">
+                    <img src="image/44.png" alt="Фотография 4" width="500" height="500">
+                </a>
+            </p>
+        </div>
+        <style>
+            body {
+                background-image: url('image/back.png');
+                background-repeat: no-repeat;
+                background-size: 1950px;
+            }
+        </style>
+    </div>
 </body>
+
 </html>
