--- a/index.html
+++ b/index.html
@@ -187,22 +187,15 @@
         </div>
         <div class="history container">
             <div class="history-text" id="first">
-                Брашов имеет богатую историю, уходящую корнями в XIII век. Город был основан саксонскими колонистами,
-                привлеченными королями Венгрии для укрепления границы и роста торговли. Стратегическое расположение в
-                долине между Карпатами делало его привлекательным для торговцев и путешественников, что способствовало
-                его быстрому развитию.
+                Брашов имеет богатую историю, уходящую корнями в XIII век. Город был основан саксонскими колонистами,привлеченными королями Венгрии для укрепления границы и роста торговли. Стратегическое расположение в долине между Карпатами делало его привлекательным для торговцев и путешественников, что способствовало его быстрому развитию.<br>
 
                 Саксонские колонисты возвели крепость и начали строительство города вокруг неё. В XIII веке Брашов
                 получил статус города и право на самоуправление, а в XIV веке вошел в состав Ганзейского союза, что
-                сильно усилило его экономическую мощь и политическое влияние.
+                сильно усилило его экономическую мощь и политическое влияние.<br>
 
-                В течение веков Брашов стал местом смешения различных культур и национальностей. Немцы, венгры, румыны,
-                армяне и другие народы сосуществовали здесь, оставляя свой отпечаток на городской архитектуре, культуре
-                и обычаях.
+                В течение веков Брашов стал местом смешения различных культур и национальностей. Немцы, венгры, румыны, армяне и другие народы сосуществовали здесь, оставляя свой отпечаток на городской архитектуре,культуре и обычаях.
 
-                В течение истории Брашов стал свидетелем многих важных событий, включая войны, революции и экономические
-                изменения. В XX веке город был включен в состав Румынии и стал одним из важных промышленных и культурных
-                центров страны.
+                В течение истории Брашов стал свидетелем многих важных событий, включая войны, революции и экономические изменения. В XX веке город был включен в состав Румынии и стал одним из важных промышленных и культурных центров страны.<br>
 
                 Сегодня Брашов остается важным культурным, экономическим и туристическим центром Румынии, привлекая
                 посетителей своей исторической архитектурой, красивыми пейзажами и богатым культурным наследием.
