--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="hero-reviews-content">
                             <div class="hero-reviews-name">Гора Тымпа</div>
                             <div class="hero-reviews-text">
-                                Гора Тымпа и канатная дорога в Брашове — это источник вечной вдохновения и великолепного
+                                Гора Тымпа и канатная дорога в Брашове — это источник вечного вдохновения и великолепного
                                 приключения.По мере подъема, сердце наполняется восторгом, а душа — свободой, словно
                                 сливаясь с ветром и горными вершинами.
                             </div>
@@ -153,7 +153,7 @@
                             <div class="hero-reviews-name">Strada Sforii</div>
                             <div class="hero-reviews-text">
                                 Strada Sforii — это не просто улица, это магическое место, где каждый шаг пробуждает
-                                новые чувства и воспоминания.Её узкие стены словно приглашают вас на путешествие сквозь
+                                новые чувства и воспоминания.Её узкие стены словно приглашают вас в путешествие сквозь
                                 время, в эпоху, где каждый камень хранит свою историю.
                             </div>
                         </div>
