--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <div class="hero-reviews-content">
                             <div class="hero-reviews-name">Гора Тымпа</div>
                             <div class="hero-reviews-text">
-                                Гора Тымпа и канатная дорога в Брашове — это источник вечной вдохновения и великолепного
+                                Гора Тымпа и канатная дорога в Брашове — это источник вечного вдохновения и великолепного
                                 приключения.По мере подъема, сердце наполняется восторгом, а душа — свободой, словно
                                 сливаясь с ветром и горными вершинами.
                             </div>
