--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     Посетите расположенный в сердце Румынии, город Брашов.
                 </div>
                 <div class="hero-description">
-                    Он славится атмосферными старыми улочками, старинной готической архитектурой и потрясающей
+                    Он славится уютными старыми улочками, старинной готической архитектурой и потрясающей
                     романтической атмосферой, представляя собой смесь прекрасных горных пейзажей и средневековой истории
                     с значительным саксонским влиянием.
                 </div>
