--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="hero-description">
                     Он славится уютными старыми улочками, старинной готической архитектурой и потрясающей
                     романтической атмосферой, представляя собой смесь прекрасных горных пейзажей и средневековой истории
-                    с значительным саксонским влиянием.
+                    со значительным саксонским влиянием.
                 </div>
                 <a class="hero-btn" href="#">Заказать тур</a>
             </div>
